# gaussnewton

gaussnewton/: CMakeLists.txt  README.me  gaussnewton.cpp
